--- a/workshop/solutions/4_raytrace/examples/pyramid.ini
+++ b/workshop/solutions/4_raytrace/examples/pyramid.ini
@@ -8,30 +8,35 @@ type = plane
 id = 0
 normal = 0 1 0
 point = 0 0 0
+material = 0
 
 [top]
 type = plane
 id = 1
 normal = 0 -1 0
 point = 0 1 0
+material = 0
 
 [left]
 type = plane
 id = 2
 normal = 1 0 0
 point = -1 0 0
+material = 0
 
 [right]
 type = plane
 id = 3
 normal = -1 0 0
 point = 1 0 0
+material = 0
 
 [back]
 type = plane
 id = 4
 normal = 0 0 -1
 point = 0 0 1
+material = 0
 
 [pyramid_left]
 type = triangle
@@ -39,6 +44,8 @@ id = 5
 a = -0.5 0 0
 b = 0 0.75 0
 c = 0 0 -0.5
+normal = -0.375 0.25 -0.375
+material = 1
 
 [pyramid_right]
 type = triangle
@@ -46,6 +53,8 @@ id = 6
 a = 0.5 0 0
 b = 0 0.75 0
 c = 0 0 -0.5
+normal = 0.375 0.25 -0.375
+material = 1
 
 [pyramid_back]
 type = triangle
@@ -53,6 +62,8 @@ id = 7
 a = -0.5 0 0
 b = 0.5 0 0
 c = 0 0.75 0
+normal = 0 0 0.75
+material = 1
 
 [pyramid_bottom]
 type = triangle
@@ -60,3 +71,28 @@ id = 8
 a = -0.5 0 0
 b = 0.5 0 0
 c = 0 0 -0.5
+normal = 0 -0.5 0
+material = 1
+
+[box]
+type = material
+id = 0
+color = 0.1 0.2 0.5
+phong = 32
+reflect = 0.15
+transparency = 0
+
+[pyramid]
+type = material
+id = 1
+color = 0.7 0.7 0.7
+phong = 32
+reflect = 0.1
+transparency = 0.5
+
+[point]
+type = point
+point = 1 0.1 -4
+color = 1 1 1
+attenuation = 1 0.14 0.07
+intensity = 2
