--- a/workshop/solutions/4_raytrace/examples/sphere.ini
+++ b/workshop/solutions/4_raytrace/examples/sphere.ini
@@ -1,9 +1,25 @@
 [camera]
-position = 0 -3 0
-forward = 1 0 0
+position = 0 0 -3
+forward = 0 0 1
 up = 0 1 0
 
 [sphere]
 type = sphere
 center = 0 0 0
 radius = 1
+material = 0
+
+[material]
+type = material
+id = 0
+color = 0 0.7 0.7
+phong = 32
+reflect = 0
+transparency = 0
+
+[point]
+type = point
+point = -2 2 -3
+color = 1 1 0.8
+attenuation = 1 0.14 0.07
+intensity = 1
