--- a/workshop/solutions/4_raytrace/examples/sphere_plane.ini
+++ b/workshop/solutions/4_raytrace/examples/sphere_plane.ini
@@ -1,5 +1,5 @@
 [camera]
-position = 0 0.5 -3
+position = 0 0.5 -6
 forward = 0 0 1
 up = 0 1 0
 
@@ -8,9 +8,34 @@ type = sphere
 id = 0
 center = 0 1 0
 radius = 1
+material = 0
 
 [plane]
 type = plane
 id = 1
 normal = 0 1 0
 point = 0 0 0
+material = 1
+
+[sphere_mat]
+type = material
+id = 0
+color = 0.1 0.25 1
+phong = 32
+reflect = 0.25
+transparency = 0
+
+[plane_mat]
+type = material
+id = 1
+color = 1 0.25 0
+phong = 32
+reflect = 0.1
+transparency = 0.25
+
+[point]
+type = point
+point = 0 2 -1
+color = 1 1 1
+attenuation = 1 0.14 0.07
+intensity = 1
